syntax = "proto3";

package go.micro.srv.GetSession;

service Example {
	rpc GetSession(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Sessionid = 1;
}

message Response {
	string Errno = 1;
	string ErrMsg = 2;
	//返回用户名
	string User_name = 3;
}